<resources>
    <string name="app_name">Quản lý đoàn viên </string>
    <string name="title_email">Email</string>
    <string name="title_password">Mật khẩu </string>
    <string name="title_login">Đăng nhập </string>
    <string name="msg_no_internet">Không thể truy cập internet </string>
    <string name="title_statistical">Thống kê </string>
    <string name="title_revenue">Quản lý thu</string>
    <string name="title_spend">Quản lý chi </string>
    <string name="title_username">Tên đăng nhập </string>
    <string name="title_forgot_password">Quên mật khẩu </string>
    <string name="title_ok">OK</string>
    <string name="msg_forgot_password">Vì lý do bảo mật, bạn vui lòng liên lạc với admin
        theo thông tin  sau để lấy lại mật khẩu Email: tuan.dev.java@gmail.com
    </string>
    <string name="title_spend_other">Khoản thu khác</string>
    <string name="title_faculty">Khoa</string>
    <string name="save_password">Lưu mật khẩu</string>
    <string name="title_hcm">Đoàn thanh niên cộng sản Hồ Chí Minh</string>
    <string name="title_manager_classes">Quản lý lớp</string>
    <string name="title_name_spend">Tên khoản thu</string>
    <string name="title_save">Lưu khoản thu </string>
    <string name="title_year_spend">Năm thu</string>
    <string name="title_money">Khoản tiền</string>
    <string name="title_note">Ghi chú</string>
    <string name="mes_title_other_spend_empty">Tiêu đề không được để trống</string>
    <string name="mes_des_other_spend_empty">Mô tả khồng được để trống</string>
    <string name="mes_amount_">Số tiền cần lớn hơn 0</string>
    <string name="mes_enter_year">Yêu cầu nhập năm</string>
    <string name="title_filter">Lọc</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_introduce">Giới thiệu</string>
    <string name="title_number_money">Tổng tiền thu (VND): </string>
    <string name="title_number_revenue">Tổng tiền chi (VND): </string>
    <string name="title_number_">Tổng tiền còn lại (VND): </string>
    <string name="msg_requai_year">Yêu cầu nhập năm</string>
    <string name="title_save_output">Lưu khoản chi</string>
    <string name="msg_no_connect">Không thể lấy dữ liệu</string>
    <string name="new_renvenue">Thêm khoản chi</string>
    <string name="dongtien">Đã đóng</string>
    <string name="title_spend_">Khoản thu</string>
    <string name="title_manager_spend">Quản lý thu đoàn phí</string>
    <string name="title_update">Cập nhật</string>
    <string name="msg_update_money_success">Cập nhật thành công</string>
    <string name="tncs">ĐOÀN THANH NIÊN CS HỒ CHÍ MINH</string>
    <string name="title_haui">ĐOÀN TRƯỜNG DHCN HÀ NỘI</string>
    <string name="title_export">Xuất pdf báo cáo</string>
    <string name="title_export_error">Export error</string>
    <string name="action_export">export</string>
    <string name="title_export_success">Export success file save in</string>
    <string name="title_reques_pemissions">Yêu cầu quyền</string>
    <string name="message_request_read_pemissions">Để sử dụng chức năng này cần quyền ghi dữ liệu. Bạn có đồng ý?</string>
    <string name="title_data_error">Không có dữ liệu</string>
    <string name="title_name_spend1">Tên khoản chi</string>
    <string name="title_introduce_permisition">Ứng dụng được thiết kế bởi Tuannv. Tất cả các quyền được đảm bảo.</string>
    <string name="title_introduce_detail">Đề tài được xây dựng nhằm mục đích giúp cán bộ đoàn trường có thể quản lý các thông tin của đoàn viên một cách rõ ràng, chính xác hơn. Với thực trạng cách quản lý bằng giấy tờ như hiện nay, thông tin lưu trữ của sinh viên có nguy cơ bị thất lạc. Vì vậy, ứng dụng này sinh ra để giúp người quản lý có thể quản lý được đoàn viên một cách tiện lợi nhất, không lo mất mát hoặc thất lạc dữ liệu. Hệ thống sẽ chia theo các khoa , bên trong khoa bao gồm lớp và bên trong lớp sẽ có các đoàn viên. Đoàn viên bao gồm toàn bộ các thông tin như mã sinh viên, ngày sinh... Hệ thống cũng sẽ quản lý được các khoản thu, chi của một cơ sở đoàn nào đó như khoa, năm. Thống kê một cách chi tiết và chính xác các khoản thu, chi của cơ sở đoàn đảm bảo tính minh bạch về tài chính.</string>
    <string name="title_infomation">Thông tin liên lạc:</string>
</resources>
