<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_teal_500"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <TextView
                android:padding="@dimen/dp_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/color_teal_800"
                android:textSize="@dimen/sp_20"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_50">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_7">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                        android:hint="@string/title_username"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_7">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableLeft="@drawable/ic_lock_black_24px"
                        android:hint="@string/title_password"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="@dimen/dp_7"
                    android:text="@string/title_forgot_password"/>


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/color_teal_500"
                    android:text="@string/title_login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>

