<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="dialog"
            type="com.haui.tuannv.qldv.ui.activity.auth.forgotpassword.ForgotPasswordFragment"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:minWidth="@dimen/dp_300"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/title_forgot_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_17"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_teal_500"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/msg_forgot_password"
            android:textColor="@color/color_grey_700"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:onClick="@{() -> dialog.dismissDialog()}"
            android:padding="@dimen/dp_10"
            android:text="@string/title_ok"
            android:textColor="@color/color_teal_500"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"/>
    </LinearLayout>

</layout>
