<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewmodel"
            type="com.haui.tuannv.qldv.ui.auth.login.LoginViewModel"
            />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_teal_500"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_20"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_7"
                android:text="@string/app_name"
                android:textColor="@color/color_blue_800"
                android:textSize="@dimen/sp_20"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_50"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_7"
                    >

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                        android:hint="@string/title_username"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.user.account}"
                        bind:setErrorEditText="@{viewmodel.user.account}"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_7"
                    >

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableLeft="@drawable/ic_lock_black_24px"
                        android:hint="@string/title_password"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.user.password}"
                        bind:setErrorEditText="@{viewmodel.user.password}"
                        />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <CheckBox
                        android:id="@+id/checkked_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                        android:paddingTop="@dimen/dp_7"
                        android:text="@string/save_password"
                        />
                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:onClick="@{() -> viewmodel.forgotPassword()}"
                        android:paddingTop="@dimen/dp_7"
                        android:text="@string/title_forgot_password"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/color_teal_500"
                    android:onClick="@{() -> viewmodel.login()}"
                    android:text="@string/title_login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="@dimen/sp_16"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>

