<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.haui.tuannv.qldv.ui.revenue.newrevenue.NewRevenueViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include
            layout="@layout/partial_toolbar"
            android:id="@+id/toolbar"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title_name_spend"
                    android:text="@={viewmodel.newRevenue.title}"
                    android:textSize="@dimen/sp_15"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title_money"
                    android:inputType="number"
                    android:text="@={`` + viewmodel.newRevenue.amount}"
                    android:textSize="@dimen/sp_15"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title_note"
                    android:text="@={viewmodel.newRevenue.desciption}"
                    android:textSize="@dimen/sp_15"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/color_blue_800"
            android:onClick="@{() -> viewmodel.addRevenue()}"
            android:text="@string/title_save_output"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_17"
            />
    </LinearLayout>

</layout>
